fix: adjust body styles to fix mobile align issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   margin: 0;
   overflow: hidden;
 }
